@@ -222,7 +222,6 @@ emacspeak-ocr.elc \
 emacspeak-org.elc \
 emacspeak-orgalist.elc \
 emacspeak-origami.elc \
-emacspeak-npr.elc \
 emacspeak-nxml.elc \
 emacspeak-outline.elc \
 emacspeak-popup.elc \
@@ -511,7 +510,6 @@ emacspeak-navi-mode.elc: emacspeak-navi-mode.el dtk-speak.elc voice-setup.elc
 emacspeak-net-utils.elc: emacspeak-net-utils.el dtk-speak.elc voice-setup.elc
 emacspeak-newsticker.elc: emacspeak-newsticker.el dtk-speak.elc
 emacspeak-nov.elc: emacspeak-nov.el dtk-speak.elc voice-setup.elc
-emacspeak-npr.elc: emacspeak-npr.el dtk-speak.elc voice-setup.elc
 emacspeak-nxml.elc: emacspeak-nxml.el dtk-speak.elc voice-setup.elc
 emacspeak-org.elc: emacspeak-org.el dtk-speak.elc voice-setup.elc
 emacspeak-orgalist.elc: emacspeak-orgalist.el dtk-speak.elc voice-setup.elc
