@@ -105,7 +105,7 @@ given name, it is updated with path and position."
 
 (defvar emacspeak-amark-file ".amarks.el"
   "Name of file used to save AMarks.")
-
+;;;###autoload
 (defun emacspeak-amark-save ()
   "Save buffer-local AMarks in  directory of currently playing resource."
   (interactive)
@@ -121,7 +121,7 @@ given name, it is updated with path and position."
       (message "Saved AMarks in %s" (buffer-file-name))
       (kill-buffer buff)
       (emacspeak-auditory-icon 'save-object))))
-
+;;;###autoload
 (defun emacspeak-amark-load (&optional dir)
   "Locate AMarks file from `dir' current  directory is default, and load it."
   (cl-declare (special emacspeak-amark-list
