@@ -708,7 +708,6 @@ command that the key sequence executes."
     ("/" emacspeak-wizards-web-clean-up-processes)
     ("'" emacspeak-m-player-using-hrtf)
     ("B" eww-list-bookmarks)
-    ("N" emacspeak-npr-listing)
     ("a" emacspeak-wizards-term)
     ("b" eww-list-buffers)
     ("c" browse-url-chrome)
@@ -723,7 +722,6 @@ command that the key sequence executes."
     ("k" emacspeak-webspace-knowledge-search)
     ("l" emacspeak-librivox)
     ("m" vm)
-    ("n" emacspeak-npr-play-program)
     ("o" helm-mini)
     ("p" emacspeak-wizards-pdf-open)
     ("s" emacspeak-wizards-shell)
